Updated homepage link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <b>Works best (or only) in <a href="http://www.mozilla.com/firefox">firefox.</a></b>
         </p>
         <p style="font-family:arial;color:gray;font-size:12px;">
-            Made by <a href="http://www.lel.ed.ac.uk/homes/justin/">Justin Quillinan</a> in about a day.  <a href="http://www.twitter.com/justinq">Tweet me</a> why don't you.
+            Made by <a href="http://justinq.github.com/">Justin Quillinan</a> in about a day.  <a href="http://www.twitter.com/justinq">Tweet me</a> why don't you.
         </p>
         <p style="font-family:arial;color:gray;font-size:12px;">
             A visualisation for <a href="http://culturehackscotland.com">Culture Hack Scotland</a> based on the <a href="http://culturehackscotland.com/datasets/edinburghfootfalldata2010FULL.xls" target="_blank">2010 Edinburgh footfall data</a> published by the City of Edinburgh Council.</b>
